# rstts-bot

./: .gitignore  Cargo.toml
src/: main.rs  sus.rs
