[package]
name = "tts-bot"
version = "0.1.0"
authors = ["Elias De Maertelaere <elias.demaertelaere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "*"
serde_json = "*"
hyper = "*"
tokio = { version = "0.2.0", features = ["full", "tracing"] }
songbird = { git = "https://github.com/serenity-rs/songbird", branch = "current" }

[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend"]
git = "https://github.com/serenity-rs/serenity"
branch = "current"