[package]
name = "tts-bot"
version = "0.1.0"
authors = ["Elias De Maertelaere <elias.demaertelaere@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "*"
uuid = { version = "0.8", features = ["serde", "v4"] }
dotenv = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "*"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full", "tracing"] }
songbird = "*"
uwuify = "0.2.2"
hyper-tls = "0.5.0"


[dependencies.serenity]
features = ["client", "standard_framework", "voice", "rustls_backend"]
version = "0.10"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
